[gd_scene load_steps=8 format=3 uid="uid://buptmc4dspsfu"]

[ext_resource type="Script" uid="uid://cnaesh0m7hsfk" path="res://main/navigation_node.gd" id="1_mffmd"]
[ext_resource type="Script" uid="uid://d2l8vc6t3j0cm" path="res://main/toast_counter.gd" id="2_fpn7l"]
[ext_resource type="Theme" uid="uid://csn8r8e58m7eh" path="res://liss_theme.tres" id="2_yv2n6"]
[ext_resource type="FontFile" uid="uid://d3rb01eqt6j05" path="res://fonts/baloo.ttf" id="3_fpn7l"]
[ext_resource type="Texture2D" uid="uid://bk7in85tmi7hs" path="res://graphics/arrow_down.png" id="4_jjynt"]
[ext_resource type="PackedScene" uid="uid://c1k0iiq4gbaro" path="res://ui_components/button_rounded.tscn" id="6_fpn7l"]
[ext_resource type="AudioStream" uid="uid://byqxia7grg0t0" path="res://ui_components/audio/btn_4.wav" id="7_jjynt"]

[node name="NavigationNode" type="Node2D"]
script = ExtResource("1_mffmd")
metadata/_custom_type_script = "uid://cnaesh0m7hsfk"

[node name="ToastCounter" type="Node2D" parent="."]
script = ExtResource("2_fpn7l")

[node name="LblTitle" type="Label" parent="ToastCounter"]
offset_left = 21.0
offset_top = 22.0
offset_right = 459.0
offset_bottom = 156.0
theme = ExtResource("2_yv2n6")
theme_override_constants/line_spacing = -42
text = "Personlig
Toasträknare"
horizontal_alignment = 1

[node name="LblUsername" type="Label" parent="ToastCounter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = 192.0
offset_right = 408.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yv2n6")
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_fpn7l")
theme_override_font_sizes/font_size = 48
text = "Lisse Spexlund"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LblToastsPurchasedText" type="Label" parent="ToastCounter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = 442.0
offset_right = 390.0
offset_bottom = 519.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yv2n6")
theme_override_fonts/font = ExtResource("3_fpn7l")
theme_override_font_sizes/font_size = 48
text = "Köpta toast"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LblInstructions" type="Label" parent="ToastCounter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 641.0
offset_right = 415.0
offset_bottom = 729.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yv2n6")
theme_override_constants/line_spacing = -14
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_fpn7l")
theme_override_font_sizes/font_size = 32
text = "Tryck på knappen
för att registrera toast!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpriteArrow" type="Sprite2D" parent="ToastCounter"]
position = Vector2(240, 755)
texture = ExtResource("4_jjynt")

[node name="ButtonRounded" parent="ToastCounter" instance=ExtResource("6_fpn7l")]
offset_left = 28.0
offset_top = 531.0
offset_right = 228.0
offset_bottom = 628.0
text = "Logga ut"

[node name="ToastCount" type="Node2D" parent="ToastCounter"]
position = Vector2(240, 349)

[node name="LblToastCount" type="Label" parent="ToastCounter/ToastCount"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -148.0
offset_right = 207.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yv2n6")
theme_override_colors/font_outline_color = Color(0.501961, 0.839216, 0.968627, 1)
theme_override_font_sizes/font_size = 244
text = "620"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AudioToastBuy" type="AudioStreamPlayer" parent="ToastCounter"]
stream = ExtResource("7_jjynt")

[node name="ButtonMode" parent="ToastCounter" instance=ExtResource("6_fpn7l")]
offset_left = 254.0
offset_top = 531.0
offset_right = 454.0
offset_bottom = 628.0
text = "Kaffe"

[connection signal="button_down" from="ToastCounter/ButtonRounded" to="ToastCounter" method="_on_logout_button_pressed"]
[connection signal="button_down" from="ToastCounter/ButtonMode" to="ToastCounter" method="_on_mode_button_down"]
